<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="asteroid_name_hint">Asteroid\'s Name</string>
    <string name="approach_date_hint">2021-10-09</string>
    <string name="asteroid_status_content_description">This image shows the asteroid status of whether it is normal or potentially hazardous</string>
    <string name="image_of_the_day_content_desc">This shows the space image of the day</string>
    <string name="this_area_shows_a_list_of_asteroids_that_you_can_click_on">This area shows a list of asteroids that you can click on</string>
    <string name="progress_bar_shows_while_fetching_data_from_the_network">Progress bar shows while fetching data from the network</string>
    <string name="shows_a_picture_of_an_asteroid_that_may_or_may_not_be_potentially_hazardous">Shows a picture of an asteroid that may or may not be potentially hazardous</string>
    <string name="the_close_approach_date_label">The close approach date label</string>
    <string name="the_absolute_magnitude_label">The absolute magnitude label</string>
    <string name="the_help_button">The help button</string>
    <string name="the_estimated_diameter_label">The estimated diameter label</string>
    <string name="relative_velocity_label">Relative velocity label</string>
    <string name="distance_from_earth_label">Distance from earth label</string>
</resources>
