<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.asteroidradar.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/activity_main_image_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:asteroidStatusImage="@{viewModel.asteroid.potentiallyHazardous}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/asteroid_safe"
            android:contentDescription="@string/shows_a_picture_of_an_asteroid_that_may_or_may_not_be_potentially_hazardous"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title"
                        android:textColor="@color/default_text_color"
                        android:contentDescription="@string/the_close_approach_date_label"/>

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@{viewModel.asteroid.closeApproachDate}"
                        android:textColor="@color/default_text_color"
                        android:contentDescription="@{viewModel.asteroid.closeApproachDate}"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title"
                            android:textColor="@color/default_text_color"
                            android:contentDescription="@string/the_absolute_magnitude_label"/>

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/default_text_color"
                            app:astronomicalUnitText="@{viewModel.asteroid.absoluteMagnitude}"
                            android:contentDescription="@{Double.toString(viewModel.asteroid.absoluteMagnitude)}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_help_circle"
                        android:contentDescription="@string/the_help_button"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/estimated_diameter_title"
                    android:textColor="@color/default_text_color"
                    android:contentDescription="@string/the_estimated_diameter_label"/>

                <TextView
                    android:id="@+id/estimated_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    app:kmUnitText="@{viewModel.asteroid.estimatedDiameter}"
                    tools:text="0.82 km"
                    android:contentDescription="@{Double.toString(viewModel.asteroid.estimatedDiameter)}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/relative_velocity_title"
                    android:textColor="@color/default_text_color"
                    android:contentDescription="@string/relative_velocity_label"/>

                <TextView
                    android:id="@+id/relative_velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    app:velocityText="@{viewModel.asteroid.relativeVelocity}"
                    android:contentDescription="@{Double.toString(viewModel.asteroid.relativeVelocity)}"
                    tools:text="11.9 km/s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/distance_from_earth_title"
                    android:textColor="@color/default_text_color"
                    android:contentDescription="@string/distance_from_earth_label"/>

                <TextView
                    android:id="@+id/distance_from_earth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    app:astronomicalUnitText="@{viewModel.asteroid.distanceFromEarth}"
                    tools:text="0.0924 au"
                    android:contentDescription="@{Double.toString(viewModel.asteroid.distanceFromEarth)}"/>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>